fixes go to top margin spilling into li

--- a/dev/scss/elements/_teaser.scss
+++ b/dev/scss/elements/_teaser.scss
@@ -24,7 +24,7 @@
     }
   }
 
-  .go-to {
+  & > .go-to {
     margin-top: 2em;
   }
 }
